# city-strides-hacking

./: .gitignore  .gitmodules  38114_cache.csv  38121_cache.csv  Cargo.toml  README.md  _planner_entrypoint.py  add_new_city.py  cache.csv  create_heat_map.py  download_data_for_new_city.py  download_node_csv.py  generate_heat_map.py  generate_html.py  generate_node_heat_map.py  generate_route.py  generate_route.rs  get_data_for_new_city.py  index.html  nodes.csv  overpass_queries.md  parameters.yaml  past_runs.html  plot_nodes.py  plot_notes.py  plot_trace_of_nodes.py  requirements.txt  ruff.toml  run_manager.js  test_compatibility_entrypoints.py  utils.py  utils.rs
cache/: 0_cache.csv  131165_cache.csv  38102_cache.csv  38114_cache.csv  38121_cache.csv  93031_cache.csv  aarhus_kommune.csv  all_toronto.csv  amsterdam.csv  bahia.csv  bangkok.csv  barrie.csv  bray.csv  breda.csv  burnaby.csv  cadiz.csv  calgary.csv  cambridge.csv  dublin.csv  east_york.csv  etobicoke.csv  folkestone.csv  galway.csv  gibraltar.csv  gravenhurst.csv  hamilton.csv  hiroshima.csv  indian_lake.csv  kinsale.csv  kongsberg.csv  kuala_lumpur.csv  kyoto.csv  københavns_kommune.csv  long_lake.csv  manhattan.csv  markham.csv  meaford.csv  melbourne.csv  midland.csv  montreal.csv  (+25 more)
city_strides_utils/: Cargo.toml  utils.rs
csnodes/: all_toronto.csv  all_toronto.meta.json  amsterdam.csv  bahia.csv  barrie.csv  bray.csv  breda.csv  brisbane.csv  burnaby.csv  cadiz.csv  cambridge.csv  dublin.csv  etobicoke.csv  etobicoke.meta.json  galway.csv  gibraltar.csv  gravenhurst.csv  hamilton.csv  hiroshima.csv  (+32 more)
(+127 files in other folders)
