[package]
name = "city_strides_route_generator"
version = "0.0.1"

[[bin]]
name = "city_strides_route_generator"
path = "generate_route.rs"

[dependencies]
city_strides_utils = { path = "./city_strides_utils" }
serde = "1.0"
serde_yaml = "0.8"
itertools = "0.11"
csv = "1.1"
haversine = "0.2.1"
serde_derive = "1.0"
rayon = "1.5"
